feat(code): upgrade dependencies